Added data module

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,11 +1,11 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
 }
 
 android {
-    namespace 'com.tprobius.hotelbookingapp'
+    namespace 'com.tprobius.hotelbookingapp.data'
     compileSdk 34
 
     defaultConfig {
