--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ android {
 dependencies {
     // Project
     implementation(project(":data"))
+    implementation(project(":features:hotel"))
 
     // Default
     implementation 'androidx.core:core-ktx:1.9.0'
