Added room info feature module

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ android {
 dependencies {
     // Project
     implementation(project(":data"))
+    implementation(project(":utils"))
     implementation(project(":features:hotel"))
+    implementation(project(":features:room"))
 
     // Default
     implementation 'androidx.core:core-ktx:1.9.0'
