--- a/data/build.gradle
+++ b/data/build.gradle
@@ -35,6 +35,7 @@ android {
 dependencies {
     // Project
     implementation(project(":features:hotel"))
+    implementation(project(":features:room"))
 
     // Default
     implementation 'androidx.core:core-ktx:1.9.0'
