--- a/features/hotel/build.gradle
+++ b/features/hotel/build.gradle
@@ -37,6 +37,9 @@ android {
 }
 
 dependencies {
+    // Project
+    implementation(project(":utils"))
+
     // Default
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -49,9 +52,6 @@ dependencies {
     // AdapterDelegates
     implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl:4.3.2'
     implementation 'com.hannesdorfmann:adapterdelegates4-kotlin-dsl-viewbinding:4.3.2'
-
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     // Cicerone
     implementation 'com.github.terrakok:cicerone:7.1'
