--- a/settings.gradle
+++ b/settings.gradle
@@ -16,4 +16,6 @@ dependencyResolutionManagement {
 rootProject.name = "HotelBookingApp"
 include ':app'
 include ':data'
+include ':utils'
 include ':features:hotel'
+include ':features:room'
