--- a/data/build.gradle
+++ b/data/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     // Project
     implementation(project(":features:hotel"))
     implementation(project(":features:room"))
+    implementation(project(":features:booking"))
 
     // Default
     implementation 'androidx.core:core-ktx:1.9.0'
